backend/backend_output.txt
D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/routes/auth.ts(4,10): error TS2305: Module '"@prisma/client"' has no exported member 'PrismaClient'.

    at createTSError (D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (D:\Gemini_Projects\Test\CognitiveOS\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2305 ]
}
